# Memory

allocator/: CMakeLists.txt
allocator/include/: memlib.h  mm.h
allocator/src/: main.c  memlib.c  mm.c
cache/: GPATH  GRTAGS  GTAGS  csim  csim.c  test-trans  trace.f1  tracegen  trans.c  ubuntu-handin.tar
malloc/: Makefile  config.h  mm.c
mmap/: cat  cat.c
numa/: CMakeLists.txt  NumaAllocator.h  NumaTest.h  main.cpp
